# raven

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  main.py  raven.desktop  requirements.txt  uninstall.sh
adapters/: config_loader.py  dbus_kwin.py  kwin_rust_adapter.pyi
adapters/kwin_rust_adapter/: Cargo.toml
adapters/kwin_rust_adapter/src/: dbus.rs  lib.rs
adapters/kwin_script/: metadata.json
adapters/kwin_script/contents/code/: main.js
adapters/plasmoid/: metadata.json
adapters/plasmoid/contents/ui/: main.qml
core/: config.py  models.py  tiling_engine.py
core/engine_rs/: Cargo.toml
core/engine_rs/src/: config.rs  controller.rs  dbus.rs  engine.rs  geometry.rs  layout.rs  lib.rs  main.rs
core/engine_rs/src/application/: controller.rs  engine.rs  mod.rs
core/engine_rs/src/domain/: action.rs  error.rs  geometry.rs  layout.rs  mod.rs
core/engine_rs/src/infrastructure/: config.rs  dbus.rs  mod.rs
core/engine_rs/src/ports/: messaging.rs  mod.rs
gui/: preferences.py
ports/: display_server.py  event_listener.py
raven_gui/: Cargo.toml
raven_gui/src/: main.rs
