[package]
name = "raven_gui"
version = "2.0.0"
edition = "2021"

[dependencies]
# eframe incluye egui y la ventana nativa (soporte Wayland)
eframe = { version = "0.27", default-features = false, features = ["wayland", "default_fonts", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"