[package]
name = "kwin_rust_adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "kwin_rust_adapter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1