[package]
name = "raven_core"
version = "2.6.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
zbus = { version = "4.1", default-features = false, features = ["tokio"] }
futures = "0.3"